# advent_of_code_2024

./: .clang-format  CMakeLists.txt
day1/: CMakeLists.txt  day1.cpp  day1.h  day1_main.cpp  day1_test.cpp  main.cpp
day2/: CMakeLists.txt  day2.cpp  day2.h  day2_main.cpp  day2_test.cpp
